# MCP-BSPWM

./: .gitignore  README.md
bspwm/: bspwmrc
bspwm/bspwm/scripts/: ethernet_status.sh  vpn_status.sh
bspwm/picom/: picom.conf
bspwm/polybar/: colors.ini  current.ini.save  launch.sh  workspace.ini
bspwm/scripts/: victim_to_hack.sh
bspwm/sxhkd/: sxhkdrc
kitty/: color.ini  kitty.conf
mcp/: README.md  client_ai.py  prompt.txt  pyproject.toml  server.py
polybar/: current.ini
